[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name="atc-caption"
version="0.1.0"
description="A tool to generate captions for ATC"
authors=[
    "Ruyyi <ruyyi0323@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
ffmpeg-python = ">=0.2"
lxml = ">=4.7.1"
pandas = ">=1.0.3"
numpy = ">=1.18.2"
pydub = ">=0.25.0"
pyliquibase = ">=2.0.0"
pydantic = ">= 1.9.0"
sqlalchemy = ">=1.0.0"
sounddevice = ">=0.4.4"
scipy = ">=1.7.0"